[package]
name = "Tree"
version = "1.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Christmas tree!"
readme = "README.md"
homepage = "https://github.com/SunilPaul174/tree"
repository = "https://github.com/SunilPaul174/tree"

[dependencies]
colored = "2.1.0"
rand = "0.8.5"
terminal_size = "0.4.0"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
